--- a/domc-gadgets-assets/webpack/poc.html
+++ b/domc-gadgets-assets/webpack/poc.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Webpack Gadgets</title>
+  <title>Webpack Example</title>
+  <!-- <img name="currentScript" src="https://xxx.xxxx.xxx"></img> -->
 </head>
-<body>
-<img name="currentScript" src="https://xxx.xxxx.xxx"></img>
-
 <script src="./dist/webpack-gadgets.bundle.js"></script>
+<body>
 </body>
 </html>
