--- a/domc-gadgets-assets/doomcaptcha/poc.html
+++ b/domc-gadgets-assets/doomcaptcha/poc.html
@@ -1,4 +1,4 @@
-<img name=currentScript label="<script>alert(1)</script>"></img>
+<!-- <img name=currentScript label="<script>alert(1)</script>"></img> -->
 
 <form>
 <script src=script.js></script>
