--- a/domc-gadgets-assets/google-client-api/poc.html
+++ b/domc-gadgets-assets/google-client-api/poc.html
@@ -35,8 +35,8 @@
 </head>
 <body onload="initialize()">
   <h1>Google Sheets API Client Example</h1>
-  // PAYLOAD
-  <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe>
-  <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe>
+  <!-- // PAYLOAD -->
+  <!-- <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe>
+  <iframe name="scripts" src="https://apis.google.com/js/api.js">alert("GG!")</iframe> -->
 </body>
 </html>
