--- a/domc-gadgets-assets/polyfills/poc.html
+++ b/domc-gadgets-assets/polyfills/poc.html
@@ -4,10 +4,10 @@
   <title>Polyfills Example</title>
 </head>
 
-<a id="ShadyDOM"></a>
+<!-- <a id="ShadyDOM"></a>
 <a id="ShadyDOM" name="force"></a>
 <a id="WebComponents"></a>
-<a id="WebComponents" name="root" href="https://xxx.xxx.xxx"></a>
+<a id="WebComponents" name="root" href="https://xxx.xxx.xxx"></a> -->
 
 <script src="./webcomponents-loader.js"></script>
 
