--- a/domc-gadgets-assets/rspack/poc.html
+++ b/domc-gadgets-assets/rspack/poc.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="root"><img name="currentScript" src="https://xxx.xxx.xxx">
+  <!-- <div id="root"><img name="currentScript" src="https://xxx.xxx.xxx"> -->
   <script defer src="./dist/main.bundle.js"></script>
   </div>
 </body>
