[Gadget] Add benign pages for each gadgets

--- a/domc-gadgets-assets/webpack/poc-benign.html
+++ b/domc-gadgets-assets/webpack/poc-benign.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Webpack Example</title>
+  <!-- <img name="currentScript" src="https://xxx.xxxx.xxx"></img> -->
 </head>
-<img name="currentScript" src="https://xxx.xxxx.xxx"></img>
 <script src="./dist/webpack-gadgets.bundle.js"></script>
 <body>
 </body>
