[Gadgets] Add the next gadget link on each poc web page

--- a/domc-gadgets-assets/gadgets/google-client-api/poc.html
+++ b/domc-gadgets-assets/gadgets/google-client-api/poc.html
@@ -99,5 +99,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../google-closure-library/poc.html">Next: google-closure-library</a>
+  </div>
+</section>
+
 </body>
 </html>
