--- a/domc-gadgets-assets/gadgets/google-closure-library/poc.html
+++ b/domc-gadgets-assets/gadgets/google-closure-library/poc.html
@@ -35,5 +35,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../inspire/poc.html">Next: inspire</a>
+  </div>
+</section>
+
 </body>
 </html>
