--- a/domc-gadgets-assets/gadgets/mavo/poc.html
+++ b/domc-gadgets-assets/gadgets/mavo/poc.html
@@ -55,5 +55,11 @@ Mavo.Plugins.register("myplugin", {
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../pagefind/poc.html">Next: pagefind</a>
+  </div>
+</section>
+
 </body>
 </html>
