--- a/domc-gadgets-assets/gadgets/pagefind/poc.html
+++ b/domc-gadgets-assets/gadgets/pagefind/poc.html
@@ -49,5 +49,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../polyfills/poc.html">Next: polyfills</a>
+  </div>
+</section>
+
 </body>
 </html>
