--- a/domc-gadgets-assets/gadgets/prism/poc.html
+++ b/domc-gadgets-assets/gadgets/prism/poc.html
@@ -43,5 +43,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../rspack/poc.html">Next: rspack</a>
+  </div>
+</section>
+
 </body>
 </html>
