--- a/domc-gadgets-assets/gadgets/doomcaptcha/poc.html
+++ b/domc-gadgets-assets/gadgets/doomcaptcha/poc.html
@@ -39,5 +39,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../google-client-api/poc.html">Next: google-client-api</a>
+  </div>
+</section>
+
 </body>
 </html>
