--- a/domc-gadgets-assets/gadgets/mathjax2/poc.html
+++ b/domc-gadgets-assets/gadgets/mathjax2/poc.html
@@ -53,5 +53,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../mathjax3/poc.html">Next: mathjax3</a>
+  </div>
+</section>
+
 </body>
 </html>
