--- a/domc-gadgets-assets/gadgets/polyfills/poc.html
+++ b/domc-gadgets-assets/gadgets/polyfills/poc.html
@@ -41,5 +41,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../prism/poc.html">Next: prism</a>
+  </div>
+</section>
+
 </body>
 </html>
