--- a/domc-gadgets-assets/gadgets/squirt/poc.html
+++ b/domc-gadgets-assets/gadgets/squirt/poc.html
@@ -37,5 +37,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../stage/poc.html">Next: stage</a>
+  </div>
+</section>
+
 </body>
 </html>
