--- a/domc-gadgets-assets/gadgets/stage/poc.html
+++ b/domc-gadgets-assets/gadgets/stage/poc.html
@@ -43,5 +43,11 @@ Stage.preload('./a.js')
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../steal/poc.html">Next: steal</a>
+  </div>
+</section>
+
 </body>
 </html>
