[HTML-Injection] Add the libraries that vulnerable to html injection vulnerabilities.

--- a/html-injection-assets/tinymce4/poc.html
+++ b/html-injection-assets/tinymce4/poc.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-<h1>DOM Clobbering Collection - tinymce</h1>
+<h1>DOM Clobbering Collection - tinymce4</h1>
 
 <section class="section">
   <div class="column">
@@ -36,7 +36,7 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script src=&quot;https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/7/tinymce.min.js&quot; referrerpolicy=&quot;origin&quot;&gt;&lt;/script&gt;
+  <pre>&lt;script src=&quot;https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/4/tinymce.min.js&quot; referrerpolicy=&quot;origin&quot;&gt;&lt;/script&gt;
 
 &lt;script&gt;
   tinymce.init({
@@ -44,7 +44,7 @@
 });
 &lt;/script&gt;
 &lt;textarea id=&quot;default&quot;&gt;Hello, World!&lt;/textarea&gt;</pre>
-  <script src="https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+  <script src="https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/4/tinymce.min.js" referrerpolicy="origin"></script>
 
 <script>
   tinymce.init({
@@ -57,7 +57,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../tinymce4/poc.html">Next: tinymce4</a>
+  
   </div>
 </section>
 
