--- a/html-injection-assets/froala/poc.html
+++ b/html-injection-assets/froala/poc.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-<h1>DOM Clobbering Collection - tinymce</h1>
+<h1>DOM Clobbering Collection - froala</h1>
 
 <section class="section">
   <div class="column">
@@ -25,39 +25,41 @@
   <pre>&lt;img name=&quot;currentScript&quot; src=&quot;https://xxx.xxx.xxx&quot;&gt;
 &lt;img name=&quot;attack&quot; src=&quot;https://xxx.xxx.xxx&quot;&gt;
 &lt;a name=&quot;attack&quot; href=&quot;https://xxx.xxx.xxx&quot;&gt;AAA&lt;/a&gt;
-&lt;p&gt;Copy &amp; Paste the following rendered HTML elements to the editor and Run the following code: tinymce.activeEditor.getContent(&quot;default&quot;);&lt;/p&gt;</pre>
+&lt;p&gt;Copy &amp; Paste the following rendered HTML elements to the editor and check the editor in the debugging console.&lt;/p&gt;</pre>
   <img name="currentScript" src="https://xxx.xxx.xxx">
 <img name="attack" src="https://xxx.xxx.xxx">
 <a name="attack" href="https://xxx.xxx.xxx">AAA</a>
-<p>Copy & Paste the following rendered HTML elements to the editor and Run the following code: tinymce.activeEditor.getContent("default");</p>
+<p>Copy & Paste the following rendered HTML elements to the editor and check the editor in the debugging console.</p>
   </div>
 </section>
 
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script src=&quot;https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/7/tinymce.min.js&quot; referrerpolicy=&quot;origin&quot;&gt;&lt;/script&gt;
+  <pre>&lt;link href=&quot;https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; /&gt;
+
+&lt;textarea&gt;&lt;/textarea&gt;
+
+&lt;script type=&quot;text/javascript&quot; src=&quot;https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js&quot;&gt;&lt;/script&gt;
 
 &lt;script&gt;
-  tinymce.init({
-  selector: &#x27;textarea#default&#x27;
-});
-&lt;/script&gt;
-&lt;textarea id=&quot;default&quot;&gt;Hello, World!&lt;/textarea&gt;</pre>
-  <script src="https://cdn.tiny.cloud/1/kvw088syhtkdcjivzwu785cisjwpon4zfjj2isannsfsw555/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
+  new FroalaEditor(&#x27;textarea&#x27;);
+&lt;/script&gt;</pre>
+  <link href="https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
+
+<textarea></textarea>
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script>
 
 <script>
-  tinymce.init({
-  selector: 'textarea#default'
-});
+  new FroalaEditor('textarea');
 </script>
-<textarea id="default">Hello, World!</textarea>
   </div>
 </section>
 
 <section class="section">
   <div class="column">
-  <a href="../tinymce4/poc.html">Next: tinymce4</a>
+  <a href="../richtexteditor/poc.html">Next: richtexteditor</a>
   </div>
 </section>
 
