[HTML-Injection] Update two new libraries that vulnerable to HTML Injection

--- a/html-injection-assets/tinymce4/poc.html
+++ b/html-injection-assets/tinymce4/poc.html
@@ -57,7 +57,7 @@
 
 <section class="section">
   <div class="column">
-  
+  <a href="../tui-editor/poc.html">Next: tui-editor</a>
   </div>
 </section>
 
