[HTML-Injection] Add HTML Injection vulernabilities

--- a/html-injection-assets/froala/poc-benign.html
+++ b/html-injection-assets/froala/poc-benign.html
@@ -36,7 +36,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../richtexteditor/poc.html">Next: richtexteditor</a>
+  <a href="../mermaid/poc.html">Next: mermaid</a>
   </div>
 </section>
 
