[Assets] Add the benign page for each gadgets

--- a/domc-gadgets-assets/gadgets/doomcaptcha/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/doomcaptcha/poc-benign.html
@@ -22,5 +22,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../google-client-api/poc.html">Next: google-client-api</a>
+  </div>
+</section>
+
 </body>
 </html>
