--- a/domc-gadgets-assets/gadgets/mathjax3/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/mathjax3/poc-benign.html
@@ -20,5 +20,11 @@ $$\require{tex}$$
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../mavo/poc.html">Next: mavo</a>
+  </div>
+</section>
+
 </body>
 </html>
