--- a/domc-gadgets-assets/gadgets/prism/poc.html
+++ b/domc-gadgets-assets/gadgets/prism/poc.html
@@ -45,7 +45,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../rspack/poc.html">Next: rspack</a>
+  <a href="../rollup/poc.html">Next: rollup</a>
   </div>
 </section>
 
