--- a/domc-gadgets-assets/gadgets/google-client-api/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/google-client-api/poc-benign.html
@@ -80,5 +80,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../google-closure-library/poc.html">Next: google-closure-library</a>
+  </div>
+</section>
+
 </body>
 </html>
