--- a/domc-gadgets-assets/gadgets/prism/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/prism/poc-benign.html
@@ -26,5 +26,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../rollup/poc.html">Next: rollup</a>
+  </div>
+</section>
+
 </body>
 </html>
