--- a/domc-gadgets-assets/gadgets/tsup/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/tsup/poc-benign.html
@@ -18,5 +18,11 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="column">
+  <a href="../umeditor/poc.html">Next: umeditor</a>
+  </div>
+</section>
+
 </body>
 </html>
