[Gadget] Update the vite case

--- a/domc-gadgets-assets/gadgets/vite/poc.html
+++ b/domc-gadgets-assets/gadgets/vite/poc.html
@@ -30,8 +30,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script type=&quot;module&quot; crossorigin src=&quot;index-BQeycCZk.js&quot;&gt;&lt;/script&gt;</pre>
-  <script type="module" crossorigin src="index-BQeycCZk.js"></script>
+  <pre>&lt;script type=&quot;module&quot; crossorigin src=&quot;index-DDmIg9VD.js&quot;&gt;&lt;/script&gt;</pre>
+  <script type="module" crossorigin src="index-DDmIg9VD.js"></script>
   </div>
 </section>
 
