--- a/domc-gadgets-assets/gadgets/astro/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/astro/poc-benign.html
@@ -54,7 +54,7 @@ runScripts();
 
 <section class="section">
   <div class="column">
-  <a href="../doomcaptcha/poc.html">Next: doomcaptcha</a>
+  <a href="../ckplayer/poc.html">Next: ckplayer</a>
   </div>
 </section>
 
