--- a/domc-gadgets-assets/gadgets/curl/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/curl/poc-benign.html
@@ -13,8 +13,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script src=&quot;https://raw.githubusercontent.com/cujojs/curl/refs/heads/master/dist/curl/curl.js&quot;&gt;</pre>
-  <script src="https://raw.githubusercontent.com/cujojs/curl/refs/heads/master/dist/curl/curl.js">
+  <pre>&lt;script src=&quot;./curl.js&quot;&gt;&lt;/script&gt;</pre>
+  <script src="./curl.js"></script>
   </div>
 </section>
 
