--- a/domc-gadgets-assets/gadgets/inspire/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/inspire/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mathjax2/poc.html">Next: mathjax2</a>
+  <a href="../layui/poc.html">Next: layui</a>
   </div>
 </section>
 
