--- a/domc-gadgets-assets/gadgets/inspire/poc.html
+++ b/domc-gadgets-assets/gadgets/inspire/poc.html
@@ -22,8 +22,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=currentScript src=&quot;http://localhost:9999&quot;&gt;&lt;/img&gt;</pre>
-  <img name=currentScript src="http://localhost:9999"></img>
+  <pre>&lt;img name=currentScript src=&quot;http://localhost:9999&quot;&gt;</pre>
+  <img name=currentScript src="http://localhost:9999">
   </div>
 </section>
 
@@ -37,7 +37,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mathjax2/poc.html">Next: mathjax2</a>
+  <a href="../layui/poc.html">Next: layui</a>
   </div>
 </section>
 
