--- a/domc-gadgets-assets/gadgets/layui/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/layui/poc-benign.html
@@ -13,7 +13,7 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;link href=&quot;./layui.css&quot; rel=&quot;stylesheet&quot; /&gt;
+  <pre>&lt;!-- &lt;link href=&quot;./layui.css&quot; rel=&quot;stylesheet&quot; /&gt; --&gt;
 &lt;script src=&quot;./layui.js&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
   // Usage
@@ -23,7 +23,7 @@
     layer.msg(&quot;Hello World&quot;, { icon: 6 });
   });
 &lt;/script&gt;</pre>
-  <link href="./layui.css" rel="stylesheet" />
+  <!-- <link href="./layui.css" rel="stylesheet" /> -->
 <script src="./layui.js"></script>
 <script>
   // Usage
