--- a/domc-gadgets-assets/gadgets/polyfills/poc.html
+++ b/domc-gadgets-assets/gadgets/polyfills/poc.html
@@ -36,8 +36,12 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script src=&quot;./webcomponents-loader.js&quot;&gt;&lt;/script&gt;</pre>
-  <script src="./webcomponents-loader.js"></script>
+  <pre>&lt;script src=&quot;https://unpkg.com/@webcomponents/webcomponentsjs@2.8.0/webcomponents-loader.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;module&quot; src=&quot;my-element.js&quot;&gt;&lt;/script&gt;
+&lt;my-element&gt;&lt;/my-element&gt;</pre>
+  <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.8.0/webcomponents-loader.js"></script>
+<script type="module" src="my-element.js"></script>
+<my-element></my-element>
   </div>
 </section>
 
