--- a/domc-gadgets-assets/gadgets/rspack/poc.html
+++ b/domc-gadgets-assets/gadgets/rspack/poc.html
@@ -37,7 +37,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../squirt/poc.html">Next: squirt</a>
+  <a href="../seajs/poc.html">Next: seajs</a>
   </div>
 </section>
 
