--- a/domc-gadgets-assets/gadgets/pagefind/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/pagefind/poc-benign.html
@@ -20,6 +20,11 @@
     window.addEventListener(&#x27;DOMContentLoaded&#x27;, (event) =&gt; {
         new PagefindUI({ element: &quot;#search&quot;, showSubResults: true });
     });
+    const inputElement = document.querySelector(&#x27;.pagefind-ui__search-input.svelte-e9gkc3&#x27;);
+    if (inputElement) {
+        inputElement.value = &#x27;Your text here&#x27;;
+        inputElement.dispatchEvent(new Event(&#x27;input&#x27;));
+    }
 &lt;/script&gt;</pre>
   <link href="pagefind/pagefind-ui.css" rel="stylesheet">
 <script src="pagefind/pagefind-ui.js"></script>
@@ -28,13 +33,18 @@
     window.addEventListener('DOMContentLoaded', (event) => {
         new PagefindUI({ element: "#search", showSubResults: true });
     });
+    const inputElement = document.querySelector('.pagefind-ui__search-input.svelte-e9gkc3');
+    if (inputElement) {
+        inputElement.value = 'Your text here';
+        inputElement.dispatchEvent(new Event('input'));
+    }
 </script>
   </div>
 </section>
 
 <section class="section">
   <div class="column">
-  <a href="../polyfills/poc.html">Next: polyfills</a>
+  <a href="../plausible-analytics/poc.html">Next: plausible-analytics</a>
   </div>
 </section>
 
