--- a/domc-gadgets-assets/gadgets/seajs/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/seajs/poc-benign.html
@@ -13,8 +13,7 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;link rel=&quot;stylesheet&quot; href=&quot;../static/hello/src/style.css&quot;&gt;
-&lt;script src=&quot;../sea-modules/seajs/seajs/3.0.3/sea.js&quot;&gt;&lt;/script&gt;
+  <pre>&lt;script src=&quot;./sea-modules/seajs/seajs/3.0.3/sea.js&quot;&gt;&lt;/script&gt;
 &lt;script&gt;
 // Set configuration
 seajs.config({
@@ -24,8 +23,7 @@ seajs.config({
 });
 seajs.use(&quot;examples/hello/1.0.0/main&quot;);
 &lt;/script&gt;</pre>
-  <link rel="stylesheet" href="../static/hello/src/style.css">
-<script src="../sea-modules/seajs/seajs/3.0.3/sea.js"></script>
+  <script src="./sea-modules/seajs/seajs/3.0.3/sea.js"></script>
 <script>
 // Set configuration
 seajs.config({
@@ -40,7 +38,7 @@ seajs.use("examples/hello/1.0.0/main");
 
 <section class="section">
   <div class="column">
-  <a href="../squirt/poc.html">Next: squirt</a>
+  <a href="../squirt/poc.html?sq-dev">Next: squirt</a>
   </div>
 </section>
 
