--- a/domc-gadgets-assets/gadgets/squirt/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/squirt/poc-benign.html
@@ -13,8 +13,10 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
-  <pre>&lt;script src=&quot;./squirt.js&quot;&gt;&lt;/script&gt;</pre>
-  <script src="./squirt.js"></script>
+  <pre>&lt;script&gt; window.sq = {}; &lt;/script&gt;
+&lt;script src=&quot;./squirt.js&quot;&gt;&lt;/script&gt;</pre>
+  <script> window.sq = {}; </script>
+<script src="./squirt.js"></script>
   </div>
 </section>
 
