--- a/domc-gadgets-assets/gadgets/umeditor/poc.html
+++ b/domc-gadgets-assets/gadgets/umeditor/poc.html
@@ -22,8 +22,8 @@
 <section class="section">
   <div class="column">
   <p><span class="label">Payload</span><br><br>
-  <pre>&lt;a id=&quot;UMEDITOR_HOME_URL&quot; href=&quot;https://localhost:9999&quot;&gt;&lt;/a&gt;</pre>
-  <a id="UMEDITOR_HOME_URL" href="https://localhost:9999"></a>
+  <pre>&lt;a id=&quot;UMEDITOR_HOME_URL&quot; href=&quot;http://localhost:9999&quot;&gt;&lt;/a&gt;</pre>
+  <a id="UMEDITOR_HOME_URL" href="http://localhost:9999"></a>
   </div>
 </section>
 
@@ -33,12 +33,12 @@
   <pre>&lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html;charset=utf-8&quot;/&gt;
 &lt;title&gt;UMEDITOR 简单功能&lt;/title&gt;
 &lt;meta http-equiv=&quot;Content-Type&quot; content=&quot;text/html; charset=utf-8&quot;/&gt;
-&lt;link href=&quot;./themes/default/_css/umeditor.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot;&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;./third-party/jquery.min.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;./third-party/template.min.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;../umeditor.config.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;editor_api.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;./lang/zh-cn/zh-cn.js&quot;&gt;&lt;/script&gt;
+&lt;link href=&quot;/umeditor/themes/default/_css/umeditor.css&quot; type=&quot;text/css&quot; rel=&quot;stylesheet&quot;&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;/umeditor/third-party/jquery.min.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;/umeditor/third-party/template.min.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;/umeditor/umeditor.config.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; charset=&quot;utf-8&quot; src=&quot;/umeditor/_examples/editor_api.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;/umeditor/lang/zh-cn/zh-cn.js&quot;&gt;&lt;/script&gt;
 &lt;style type=&quot;text/css&quot;&gt;
 h1{
         font-family: &quot;微软雅黑&quot;;
@@ -66,12 +66,12 @@ var um = UM.getEditor(&#x27;myEditor&#x27;,{
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 <title>UMEDITOR 简单功能</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<link href="./themes/default/_css/umeditor.css" type="text/css" rel="stylesheet">
-<script type="text/javascript" src="./third-party/jquery.min.js"></script>
-<script type="text/javascript" src="./third-party/template.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="../umeditor.config.js"></script>
-<script type="text/javascript" charset="utf-8" src="editor_api.js"></script>
-<script type="text/javascript" src="./lang/zh-cn/zh-cn.js"></script>
+<link href="/umeditor/themes/default/_css/umeditor.css" type="text/css" rel="stylesheet">
+<script type="text/javascript" src="/umeditor/third-party/jquery.min.js"></script>
+<script type="text/javascript" src="/umeditor/third-party/template.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="/umeditor/umeditor.config.js"></script>
+<script type="text/javascript" charset="utf-8" src="/umeditor/_examples/editor_api.js"></script>
+<script type="text/javascript" src="/umeditor/lang/zh-cn/zh-cn.js"></script>
 <style type="text/css">
 h1{
         font-family: "微软雅黑";
