--- a/domc-gadgets-assets/gadgets/addtoany/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/addtoany/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../astro/poc.html">Next: astro</a>
+  <a href="../astro/poc-benign.html">Next: astro</a>
   </div>
 </section>
 
