--- a/domc-gadgets-assets/gadgets/ckplayer/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/ckplayer/poc-benign.html
@@ -40,7 +40,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../curl/poc.html">Next: curl</a>
+  <a href="../curl/poc-benign.html">Next: curl</a>
   </div>
 </section>
 
