--- a/domc-gadgets-assets/gadgets/curl/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/curl/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../cusdis/poc.html">Next: cusdis</a>
+  <a href="../cusdis/poc-benign.html">Next: cusdis</a>
   </div>
 </section>
 
