--- a/domc-gadgets-assets/gadgets/doomcaptcha/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/doomcaptcha/poc-benign.html
@@ -24,7 +24,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../google-client-api/poc.html">Next: google-client-api</a>
+  <a href="../google-client-api/poc-benign.html">Next: google-client-api</a>
   </div>
 </section>
 
