--- a/domc-gadgets-assets/gadgets/google-closure-library/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/google-closure-library/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../inspire/poc.html">Next: inspire</a>
+  <a href="../inspire/poc-benign.html">Next: inspire</a>
   </div>
 </section>
 
