--- a/domc-gadgets-assets/gadgets/layui/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/layui/poc-benign.html
@@ -38,7 +38,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mathjax2/poc.html">Next: mathjax2</a>
+  <a href="../mathjax2/poc-benign.html">Next: mathjax2</a>
   </div>
 </section>
 
