--- a/domc-gadgets-assets/gadgets/mathjax2/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/mathjax2/poc-benign.html
@@ -36,7 +36,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mathjax3/poc.html">Next: mathjax3</a>
+  <a href="../mathjax3/poc-benign.html">Next: mathjax3</a>
   </div>
 </section>
 
