--- a/domc-gadgets-assets/gadgets/mathjax3/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/mathjax3/poc-benign.html
@@ -22,7 +22,7 @@ $$\require{tex}$$
 
 <section class="section">
   <div class="column">
-  <a href="../mavo/poc.html">Next: mavo</a>
+  <a href="../mavo/poc-benign.html">Next: mavo</a>
   </div>
 </section>
 
