--- a/domc-gadgets-assets/gadgets/mavo/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/mavo/poc-benign.html
@@ -40,7 +40,7 @@ Mavo.Plugins.register("myplugin", {
 
 <section class="section">
   <div class="column">
-  <a href="../pagefind/poc.html">Next: pagefind</a>
+  <a href="../pagefind/poc-benign.html">Next: pagefind</a>
   </div>
 </section>
 
