--- a/domc-gadgets-assets/gadgets/plausible-analytics/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/plausible-analytics/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../plotly/poc.html">Next: plotly</a>
+  <a href="../plotly/poc-benign.html">Next: plotly</a>
   </div>
 </section>
 
