--- a/domc-gadgets-assets/gadgets/plotly/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/plotly/poc-benign.html
@@ -36,7 +36,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../polyfills/poc.html">Next: polyfills</a>
+  <a href="../polyfills/poc-benign.html">Next: polyfills</a>
   </div>
 </section>
 
