--- a/domc-gadgets-assets/gadgets/polyfills/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/polyfills/poc-benign.html
@@ -24,7 +24,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../prism/poc.html">Next: prism</a>
+  <a href="../prism/poc-benign.html">Next: prism</a>
   </div>
 </section>
 
