--- a/domc-gadgets-assets/gadgets/prism/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/prism/poc-benign.html
@@ -28,7 +28,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../rollup/poc.html">Next: rollup</a>
+  <a href="../rollup/poc-benign.html">Next: rollup</a>
   </div>
 </section>
 
