--- a/domc-gadgets-assets/gadgets/rspack/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/rspack/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../seajs/poc.html">Next: seajs</a>
+  <a href="../seajs/poc-benign.html">Next: seajs</a>
   </div>
 </section>
 
