--- a/domc-gadgets-assets/gadgets/seajs/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/seajs/poc-benign.html
@@ -38,7 +38,7 @@ seajs.use("examples/hello/1.0.0/main");
 
 <section class="section">
   <div class="column">
-  <a href="../squirt/poc.html?sq-dev">Next: squirt</a>
+  <a href="../squirt/poc-benign.html?sq-dev">Next: squirt</a>
   </div>
 </section>
 
