--- a/domc-gadgets-assets/gadgets/squirt/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/squirt/poc-benign.html
@@ -22,7 +22,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../stage/poc.html">Next: stage</a>
+  <a href="../stage/poc-benign.html">Next: stage</a>
   </div>
 </section>
 
