--- a/domc-gadgets-assets/gadgets/stage/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/stage/poc-benign.html
@@ -28,7 +28,7 @@ Stage.preload('./a.js')
 
 <section class="section">
   <div class="column">
-  <a href="../steal/poc.html">Next: steal</a>
+  <a href="../steal/poc-benign.html">Next: steal</a>
   </div>
 </section>
 
