--- a/domc-gadgets-assets/gadgets/steal/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/steal/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../tsup/poc.html">Next: tsup</a>
+  <a href="../tsup/poc-benign.html">Next: tsup</a>
   </div>
 </section>
 
