--- a/domc-gadgets-assets/gadgets/tsup/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/tsup/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../umeditor/poc.html">Next: umeditor</a>
+  <a href="../umeditor/poc-benign.html">Next: umeditor</a>
   </div>
 </section>
 
