--- a/domc-gadgets-assets/gadgets/umeditor/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/umeditor/poc-benign.html
@@ -84,7 +84,7 @@ var um = UM.getEditor('myEditor',{
 
 <section class="section">
   <div class="column">
-  <a href="../vite/poc.html">Next: vite</a>
+  <a href="../vite/poc-benign.html">Next: vite</a>
   </div>
 </section>
 
