--- a/domc-gadgets-assets/gadgets/vite/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/vite/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../webpack/poc.html">Next: webpack</a>
+  <a href="../webpack/poc-benign.html">Next: webpack</a>
   </div>
 </section>
 
