--- a/domc-gadgets-assets/gadgets/cusdis/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/cusdis/poc-benign.html
@@ -38,7 +38,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../doomcaptcha/poc.html">Next: doomcaptcha</a>
+  <a href="../doomcaptcha/poc-benign.html">Next: doomcaptcha</a>
   </div>
 </section>
 
