--- a/domc-gadgets-assets/gadgets/rollup/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/rollup/poc-benign.html
@@ -20,7 +20,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../rspack/poc.html">Next: rspack</a>
+  <a href="../rspack/poc-benign.html">Next: rspack</a>
   </div>
 </section>
 
