[Gadget] Update the addtoany case to use the vulnerable version

--- a/domc-gadgets-assets/gadgets/addtoany/poc.html
+++ b/domc-gadgets-assets/gadgets/addtoany/poc.html
@@ -31,7 +31,7 @@
   <div class="column">
   <p><span class="label">Library</span><br><br>
   <pre>&lt;script async src=&quot;https://static.addtoany.com/menu/page.js&quot;&gt;&lt;/script&gt;</pre>
-  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  <script async src="./page.js"></script>
   </div>
 </section>
 
