[Misc] Commit the local changes

--- a/html-injection-assets/editor/poc-benign.html
+++ b/html-injection-assets/editor/poc-benign.html
@@ -52,7 +52,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../froala/poc.html">Next: froala</a>
+  <a href="../froala/poc-benign.html">Next: froala</a>
   </div>
 </section>
 
