--- a/html-injection-assets/froala/poc-benign.html
+++ b/html-injection-assets/froala/poc-benign.html
@@ -36,7 +36,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mermaid/poc.html">Next: mermaid</a>
+  <a href="../kindeditor/poc-benign.html">Next: kindeditor</a>
   </div>
 </section>
 
