--- a/html-injection-assets/froala/poc.html
+++ b/html-injection-assets/froala/poc.html
@@ -59,7 +59,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mermaid/poc.html">Next: mermaid</a>
+  <a href="../kindeditor/poc.html">Next: kindeditor</a>
   </div>
 </section>
 
