--- a/html-injection-assets/kindeditor/poc-benign.html
+++ b/html-injection-assets/kindeditor/poc-benign.html
@@ -24,7 +24,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../mermaid/poc.html">Next: mermaid</a>
+  <a href="../mermaid/poc-benign.html">Next: mermaid</a>
   </div>
 </section>
 
