--- a/html-injection-assets/mermaid/poc-benign.html
+++ b/html-injection-assets/mermaid/poc-benign.html
@@ -24,7 +24,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../richtexteditor/poc.html">Next: richtexteditor</a>
+  <a href="../richtexteditor/poc-benign.html">Next: richtexteditor</a>
   </div>
 </section>
 
