--- a/html-injection-assets/simplemde/poc-benign.html
+++ b/html-injection-assets/simplemde/poc-benign.html
@@ -32,7 +32,7 @@ var simplemde = new SimpleMDE({ element: document.getElementById("sample") });
 
 <section class="section">
   <div class="column">
-  <a href="../sun-editor/poc.html">Next: sun-editor</a>
+  <a href="../sun-editor/poc-benign.html">Next: sun-editor</a>
   </div>
 </section>
 
