--- a/html-injection-assets/sun-editor/poc-benign.html
+++ b/html-injection-assets/sun-editor/poc-benign.html
@@ -46,7 +46,7 @@ const editor = SUNEDITOR.create((document.getElementById('sample') || 'sample'),
 
 <section class="section">
   <div class="column">
-  <a href="../tinymce/poc.html">Next: tinymce</a>
+  <a href="../tinymce/poc-benign.html">Next: tinymce</a>
   </div>
 </section>
 
