--- a/html-injection-assets/tinymce/poc-benign.html
+++ b/html-injection-assets/tinymce/poc-benign.html
@@ -34,7 +34,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../tinymce4/poc.html">Next: tinymce4</a>
+  <a href="../tinymce4/poc-benign.html">Next: tinymce4</a>
   </div>
 </section>
 
