--- a/html-injection-assets/tinymce4/poc-benign.html
+++ b/html-injection-assets/tinymce4/poc-benign.html
@@ -34,7 +34,7 @@
 
 <section class="section">
   <div class="column">
-  <a href="../tui-editor/poc.html">Next: tui-editor</a>
+  <a href="../tui-editor/poc-benign.html">Next: tui-editor</a>
   </div>
 </section>
 
