--- a/html-injection-assets/vditor/poc-benign.html
+++ b/html-injection-assets/vditor/poc-benign.html
@@ -46,7 +46,7 @@
 
 <section class="section">
   <div class="column">
-  
+  <a href="../zenpen/poc-benign.html">Next: zenpen</a>
   </div>
 </section>
 
