[Gadgets] Update the CVE links in the README.md and fix several errors in the poc page.

--- a/domc-gadgets-assets/gadgets/polyfills/poc-benign.html
+++ b/domc-gadgets-assets/gadgets/polyfills/poc-benign.html
@@ -10,6 +10,8 @@
 
 <h1>DOM Clobbering Collection - polyfills</h1>
 
+<a id="ShadyDOM"></a><a id="ShadyDOM" name="force"></a>
+
 <section class="section">
   <div class="column">
   <p><span class="label">Library</span><br><br>
